src/test/ui/feature-gate-log_syntax.stderr
error[E0658]: `log_syntax!` is not stable enough for use and is subject to change (see issue #29598)
  --> $DIR/feature-gate-log_syntax.rs:12:5
   |
LL |     log_syntax!() //~ ERROR `log_syntax!` is not stable enough
   |     ^^^^^^^^^^^^^
   |
   = help: add #![feature(log_syntax)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
